<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    style="@style/scrollView"
    tools:context="com.example.android.p2_scorekeeperapp.MainActivity">

    <LinearLayout
        style="@style/LinearLayout1"
        android:orientation="vertical">

        <LinearLayout
            style="@style/LinearLayout1"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/LinearLayout2"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/LinearLayout3"
                    android:background="@drawable/graphic_amber">

                    <ImageView
                        style="@style/Photo"
                        android:src="@drawable/sharapova_round1"
                        android:contentDescription="@string/photo_player_a" />

                    <EditText
                        android:id="@+id/editNamePlayerA"
                        android:labelFor="@id/editNamePlayerA"
                        style="@style/Name" />

                    <EditText
                        android:id="@+id/editSurnamePlayerA"
                        android:labelFor="@id/editSurnamePlayerA"
                        style="@style/Surname" />
                </LinearLayout>

                <LinearLayout
                    style="@style/PointsGamesSetsA"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/colorAccent">

                    <TextView
                        style="@style/PointsLabel"
                        android:text="@string/points_sharapova_label"/>

                    <LinearLayout
                        style="@style/TextViewWeight">

                        <Button
                            style="@style/PlusButton"
                            android:onClick="addOneForTeamA" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    style="@style/PointsGamesSetsA"
                    android:background="@color/colorAccent">

                    <TextView
                        style="@style/PointsTeamAandB"
                        android:id="@+id/points_player_a"
                        android:text="@string/points_sharapova"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/PointsGamesSetsA"
                    android:background="@color/colorAccentLight">

                    <TextView
                        style="@style/TextViewWeight"
                        android:text="@string/games_sharapova_label" />

                    <TextView
                        android:id="@+id/games_player_a"
                        style="@style/TextViewWeight"
                        android:layout_marginLeft="@dimen/dim30"
                        android:layout_marginRight="@dimen/dim8"
                        android:text="@string/games_sharapova"
                        android:background="@color/white"
                        android:layout_marginStart="@dimen/dim30"
                        android:layout_marginEnd="@dimen/dim8" />
                </LinearLayout>

                <LinearLayout
                    style="@style/PointsGamesSetsA"
                    android:background="@color/colorAccentLight">

                    <TextView
                        style="@style/TextViewWeight"
                        android:text="@string/sets_sharapova_label" />

                    <TextView
                        android:id="@+id/sets_player_a"
                        style="@style/TextViewWeight"
                        android:layout_marginLeft="@dimen/dim30"
                        android:layout_marginRight="@dimen/dim8"
                        android:text="@string/sets_sharapova"
                        android:background="@color/white"
                        android:layout_marginStart="@dimen/dim30"
                        android:layout_marginEnd="@dimen/dim8" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout2"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/LinearLayout3"
                    android:background="@drawable/graphic_amber">

                    <ImageView
                        style="@style/Photo"
                        android:src="@drawable/halep_round"
                        android:contentDescription="@string/photo_player_b" />

                    <EditText
                        android:id="@+id/editNamePlayerB"
                        android:labelFor="@id/editNamePlayerB"
                        style="@style/Name" />

                    <EditText
                        android:id="@+id/editSurnamePlayerB"
                        android:labelFor="@id/editSurnamePlayerB"
                        style="@style/Surname" />
                </LinearLayout>

                <LinearLayout
                    style="@style/PointsGamesSetsB"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/colorAccent">

                    <LinearLayout
                        style="@style/TextViewWeight"
                        android:layout_height="wrap_content">

                        <Button
                            style="@style/PlusButton"
                            android:onClick="addOneForTeamB" />
                    </LinearLayout>

                    <TextView
                        style="@style/PointsLabel"
                        android:text="@string/points_halep_label"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/PointsGamesSetsB"
                    android:background="@color/colorAccent">

                    <TextView
                        style="@style/PointsTeamAandB"
                        android:id="@+id/points_player_b"
                        android:text="@string/points_halep"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/PointsGamesSetsB"
                    android:background="@color/colorAccentLight">

                    <TextView
                        android:id="@+id/games_player_b"
                        style="@style/TextViewWeight"
                        android:layout_marginLeft="@dimen/dim8"
                        android:layout_marginRight="@dimen/dim30"
                        android:text="@string/games_halep"
                        android:background="@color/white"
                        android:layout_marginStart="@dimen/dim8"
                        android:layout_marginEnd="@dimen/dim30" />

                    <TextView
                        style="@style/TextViewWeight"
                        android:text="@string/games_halep_label" />
                </LinearLayout>

                <LinearLayout
                    style="@style/PointsGamesSetsB"
                    android:background="@color/colorAccentLight">

                    <TextView
                        android:id="@+id/sets_player_b"
                        style="@style/TextViewWeight"
                        android:layout_marginLeft="@dimen/dim8"
                        android:layout_marginRight="@dimen/dim30"
                        android:text="@string/sets_halep"
                        android:background="@color/white"
                        android:layout_marginStart="@dimen/dim8"
                        android:layout_marginEnd="@dimen/dim30" />

                    <TextView
                        style="@style/TextViewWeight"
                        android:text="@string/sets_halep_label" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/PointsGamesSetsA"
                    android:layout_marginTop="@dimen/dim10"
                    android:background="@color/colorAccent">

                    <TextView
                        style="@style/TextViewWeight"
                        android:text="@string/foot_fault"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/TextViewWeight"
                        android:text="@string/service_fault"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    style="@style/PointsGamesSetsA"
                    android:background="@color/colorAccentLight">

                    <TextView
                        android:id="@+id/foot_fault_player_a"
                        style="@style/TextViewWeight"
                        android:background="@color/white"
                        android:layout_marginLeft="@dimen/dim8"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:text="@string/zero"
                        android:layout_marginStart="@dimen/dim8"
                        android:layout_marginEnd="@dimen/activity_vertical_margin" />



                    <TextView
                        android:id="@+id/service_fault_player_a"
                        style="@style/TextViewWeight"
                        android:background="@color/white"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/dim8"
                        android:text="@string/zero"
                        android:layout_marginStart="@dimen/activity_vertical_margin"
                        android:layout_marginEnd="@dimen/dim8" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dim8"
                    android:layout_marginEnd="@dimen/dim8"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
                    android:background="@color/colorAccentLight"
                    android:layout_marginRight="@dimen/dim8"
                    android:layout_marginLeft="@dimen/activity_vertical_margin">

                    <LinearLayout style="@style/TextViewWeight">

                        <Button
                            style="@style/PlusButton"
                            android:layout_gravity="end"
                            android:onClick="addOneFootFaultTeamA" />
                    </LinearLayout>

                    <LinearLayout style="@style/TextViewWeight">

                        <Button
                            style="@style/PlusButton"
                            android:layout_gravity="end"
                            android:onClick="addOneServiceFaultTeamA" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/LinearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/PointsGamesSetsB"
                    android:layout_marginTop="@dimen/dim10"
                    android:background="@color/colorAccent">

                    <TextView
                        style="@style/TextViewWeight"
                        android:text="@string/foot_fault"
                        android:textColor="@color/white" />

                    <TextView
                        style="@style/TextViewWeight"
                        android:text="@string/service_fault"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    style="@style/PointsGamesSetsB"
                    android:background="@color/colorAccentLight">

                    <TextView
                        android:id="@+id/foot_fault_player_b"
                        style="@style/TextViewWeight"
                        android:background="@color/white"
                        android:layout_marginLeft="@dimen/dim8"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:text="@string/zero"
                        android:layout_marginStart="@dimen/dim8"
                        android:layout_marginEnd="@dimen/activity_vertical_margin" />

                    <TextView
                        android:id="@+id/service_fault_player_b"
                        style="@style/TextViewWeight"
                        android:background="@color/white"
                        android:layout_marginRight="@dimen/dim8"
                        android:layout_marginLeft="@dimen/activity_vertical_margin"
                        android:text="@string/zero"
                        android:layout_marginEnd="@dimen/dim8"
                        android:layout_marginStart="@dimen/activity_vertical_margin" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dim8"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/dim8"
                    android:background="@color/colorAccentLight"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/dim8">

                    <LinearLayout style="@style/TextViewWeight">

                        <Button
                            style="@style/PlusButton"
                            android:layout_gravity="end"
                            android:onClick="addOneFootFaultTeamB" />
                    </LinearLayout>

                    <LinearLayout style="@style/TextViewWeight">

                        <Button
                            style="@style/PlusButton"
                            android:layout_gravity="end"
                            android:onClick="addOneServiceFaultTeamB" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/winner"
            style="@style/TheWinnerIs" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="resetScore"
            android:text="@string/reset_score"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>